syntax = "proto3";

package publishing;

service Publishing {
    rpc SendMessage(SendMessageRequest) returns (SendMessageReply) {}
}

message SendMessageRequest {
    Message message = 1;
    Request request = 2;
}

message SendMessageReply {
    string id = 1;
}

message Message {
    string content = 1;
    Embed embed = 2;
    bool tts = 3;
    repeated File files = 4;
}

message Request {
    string correlationId = 1;
    string channelId = 2;
    User user = 3;
    bool privateMessage = 4;
    bool isRedirect = 5;
}

message User {
    string id = 1;
    string name = 2;
}

message EmbedFooter {
    string text = 1;
    string iconUrl = 2;
    string proxyIconUrl = 3;
}

message EmbedImage {
    string url = 1;
    string proxyUrl = 2;
    int32 width = 3;
    int32 height = 4;
}

message EmbedThumbnail {
    string url = 1;
    string proxyUrl = 2;
    int32 width = 3;
    int32 height = 4;
}

message EmbedVideo {
    string url = 1;
    string proxyUrl = 2;
    int32 width = 3;
    int32 height = 4;
}

message EmbedProvider {
    string url = 1;
    string name = 2;
}

message EmbedAuthor {
    string url = 1;
    string name = 2;
    string iconUrl = 3;
    string proxyIconUrl = 4;
}

message EmbedField {
    string name = 1;
    string value = 2;
    bool inline = 3;
}

message Embed {
    string url = 1;
    string type = 2;
    string title = 3;
    string description = 4;
    string timestamp = 5;
    int32 color = 6;
    EmbedFooter footer = 7;
    EmbedImage image = 8;
    EmbedThumbnail thumbnail = 9;
    EmbedVideo video = 10;
    EmbedProvider provider = 11;
    EmbedAuthor author = 12;
    repeated EmbedField fields = 13;
}

message File {
    string name = 1;
    string contentType = 2;
    bytes bytes = 3;
}
